# low-latency-trading-gateway

./: .gitignore  CMakeLists.txt  PROJECT_HISTORY.md  readme.md  readme_archive.md  requirements.txt
benchmark/: CMakeLists.txt  epoll_rtt.sh
benchmark/runner/: benchmark_runner.cpp
benchmark/scripts/: README.md  analyze_hft_macro_attribution.py  plot_hft_macro_scenarios.py  plot_version_comparison.py  run_benchmarks.sh  run_hft_macro_add_rest_stage_profile.sh  run_hft_macro_op_pmc_groups.sh  run_hft_macro_perf_record.sh  run_remote_bench.sh  run_remote_compare.sh  run_remote_hft_macro_perf_record.sh  run_remote_hft_macro_scenarios_tuned.sh  run_remote_ring_size_sweep.sh  setup_remote_nohz_full.sh
benchmark/scripts/analysis/: merge_benchmark_metrics.py
benchmark/scripts/lib/: bench_linux_isolation.sh
benchmark/scripts/local/: benchmarks.sh  hft_macro_scenarios.sh
benchmark/scripts/remote/: hft_macro_scenarios_tuned.sh
benchmark/src/: bench_common.hpp  bench_cxl_hit.cpp  bench_dup_reject.cpp  bench_lmt_cross_deep.cpp  bench_lmt_cross_shallow.cpp  bench_mkt_sweep_deep.cpp  benchmark_runner.cpp  benchmark_runner.hpp  match_result_buffer.hpp
benchmark/src/hft/: bench_hft_add_far.cpp  bench_hft_add_near.cpp  bench_hft_cancel_cold.cpp  bench_hft_cancel_hot.cpp  bench_hft_cxl_miss.cpp  bench_hft_macro.cpp  bench_hft_macro_scenarios.cpp  bench_hft_market_large.cpp  bench_hft_market_small.cpp  bench_hft_modify_near.cpp  hft_macro_workload.hpp
benchmark/src/legacy/: bench_cxl_hit.cpp  bench_cxl_miss.cpp  bench_dup_reject.cpp  bench_lmt_rest.cpp  bench_mkt_sweep_deep.cpp  bench_overall.cpp
benchmark/tests/: benchmark_smoke_test.cpp
core/SPSC/: CMakeLists.txt  spsc_ring_buffer.hpp  test  test.cpp
core/matching_core/: CMakeLists.txt
core/matching_core/bench/: phase1_benchmark.cpp
core/matching_core/include/matching/: add_rest_stage_profile.hpp  array_order_book.hpp  array_side_book.hpp  cached_order_book.hpp  cached_side_book.hpp  occupancy_tree.hpp  order_book.hpp  order_pool.hpp  price_level.hpp  pricelevel_pool.hpp  ring_book.hpp  ring_buffer.hpp  types.hpp
core/matching_core/include/matching_core/: order_book.hpp  order_book_impl.hpp  order_pool.hpp  trade_sink.hpp  types.hpp
core/matching_core/src/: add_rest_stage_profile.cpp  occupancy_tree.cpp  order_book.cpp  order_pool.cpp  pricelevel_pool.cpp
core/matching_core/tests/: order_book_add_result_gtest.cpp  order_book_test.cpp
core/order_entry/: CMakeLists.txt
core/order_entry/examples/: epoll_bench_client.cpp  epoll_server.cpp
core/order_entry/include/lltg/order_entry/: codec.hpp  engine_messages.hpp  frame_parser.hpp  protocol.hpp  session.hpp
core/order_entry/include/order_entry/: codec.hpp  engine_messages.hpp  frame_parser.hpp
report/: all_phases_comparison.md  hft_macro_operation_pmc_design.md  order_entry_protocol_codec_design.md  phase10_progress.md  phase2b_to_phase_2e_comparison.md  phase3_hft_benchmark_design.md  phase4_price_level_storage_strategy.md  phase5_macro_profiling_plan.md  phase6_engine_handle_refactor_plan.md  phase7_benchmark_results.md  phase7_hot_ring_cold_map_design.md  phase9_per_scenario_benchmark.md  plot_overall_comparison.py  spsc_cloud_benchmark_20260617.md
report/order_book/: phase3_hft_benchmark_design.md  phase6_benchmark_handle_migration.md
scripts/bench/: merge_metrics.py  plot_baseline.py  run_baseline.sh  run_perf.sh
